<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SingUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/label_sign_ip"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/enter_name"
            android:padding="12dp"
            android:textColor="@color/black"
            android:inputType="text"
            tools:ignore="MissingConstraints" />


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/edittext_background"
            android:inputType="text"
            android:hint="@string/enter_email"
            android:padding="12dp"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints" />


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:inputType="textPassword"
            android:background="@drawable/edittext_background"
            android:hint="@string/enter_password"
            android:padding="12dp"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/enter_confirm_password"
            android:padding="12dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:layout_weight="1"
                android:background="@color/design_default_color_primary"
                android:text="@string/btn_sign_ip"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:layout_weight="1"
                android:background="@color/design_default_color_primary"
                android:text="@string/btn_login"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>